--- a/style.css
+++ b/style.css
@@ -82,12 +82,45 @@ header{
     background-attachment: fixed;
 }
 
+.hero_sec{
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+}
+
+.img{
+    width: 40%;
+    height: 100%;
+    
+}
+.img img{
+    overflow: visible ;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+.info{
+    width: 60%;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /* Skills and about me section */
 
 .skills, .about_me{
     background-color: antiquewhite;
-    margin-bottom: 10px;
 }
 
 .skills_section, .about_section{
@@ -110,10 +143,7 @@ header{
     text-decoration: underline;
     grid-column: span 2;
 }
-.others, .other_achieve{
-    grid-column: span 2;
 
-}
 .language, .tools, .education, .experience{
     width: auto;
     text-align: start;
@@ -149,7 +179,7 @@ header{
 .projects{
     width: 80%;
     margin: auto;
-    padding: 30px 0px;
+    padding: 30px 0px 70px 0px ;
     overflow-x: scroll;
 }
 
@@ -176,7 +206,7 @@ header{
     padding: 10px;
     border-radius: 10px;
     margin: 10px;
-    background-color: rgba(240, 255, 255, 0.521);
+    background-color: rgba(240, 255, 255, 0.281);
     backdrop-filter: 10px;
 
 }
