--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header{
 }
 
 .role{
+    width: fit-content;
     font-family: "Silkscreen", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -44,17 +45,20 @@ header{
 }
 
 .nav{
+    width: fit-content;
     display: flex;
     align-items: center;
 
 }
-
+.hamberger{
+    display:none;
+}
 .nav_items, .cv_btn{
     /* height: 40px;
     width: 110px;
     background-color: rgb(226, 221, 204); */
     padding: 5px;
-    margin: 5px 15px;
+    margin: 5px 10px;
     border-radius: 22px;
     text-align: center;
     align-content: center;
@@ -101,14 +105,38 @@ header{
     object-fit: cover;
 
 }
-.info{
+.hero_info{
     width: 60%;
     height: 100%;
 }
 
+.hero_info{
+    padding: 40px;
+    align-content: center;
+}
+.first{
+    font-size: 2rem;
+    font-weight: bold;
+    text-decoration: underline;
 
+}
 
+.devname{
+    font-size: 3rem;
+    font-weight: bolder;
+    text-shadow: 
+    1px 1px 0 white, 
+    -1px 1px 0 white;
+}
 
+.hero_desc{
+    font-size: 1.8rem;
+    padding: 10px 5px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: 12px;
+    border-radius: 8px;
+}
 
 
 
@@ -157,7 +185,7 @@ header{
 
 }
 .language div, .tools div, .others div{
-    height: 80px;
+    height: fit-content;
     padding: 5px;
 }
 /* .skills *, .about_me *{
@@ -201,7 +229,7 @@ header{
 
 .card{
     height: 350px;
-    width: 22vw ;
+    width: 300px ;
     overflow: hidden;
     padding: 10px;
     border-radius: 10px;
@@ -252,7 +280,6 @@ header{
 
 /* contact form css */
 .contact{
-    height: 70vh;
     background-image: url('https://t4.ftcdn.net/jpg/04/81/72/77/360_F_481727770_1u2ylNpie8WRosMVbv1COXDnnEK6ofwh.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -343,11 +370,90 @@ footer{
 
 .footer{
     width: 80%;
-    height: 30px;
+    /* height: 30px; */
     margin: auto;
     display: flex;
     align-items: center;
     color: rgb(255, 255, 255);
     justify-content: space-between;
     bottom: 0px;
+}
+.footer_box{
+    padding: 5px 10px;
+}
+
+
+
+/* Media querry for tablet */
+
+@media (min-width: 600px) and (max-width: 1024px) {
+    .top_bar, .hero_sec, .skills_section, .projects, .about_section{
+        width: 100%;
+    }
+    .role{
+        font-size: 4vw;
+    }
+    .nav_items, .cv_btn{
+        padding: 5px;
+    }
+    .contact{
+        background-position: left;
+    }
+}
+
+/* media querry for mobile */
+
+@media (max-width: 600px) {
+    .nav{
+        display: none;
+    }
+    .role{
+        font-size: 30px;
+    }
+    .hero_sec{
+        display: block;
+    }
+    .img, .hero_info{
+        width: 100%;
+    }
+    .hero{
+        height: fit-content;
+    }
+    .devname{
+        font-size: 2rem;
+    }
+    .hero_desc{
+        font-size: 1.2rem;
+    }
+
+    .skills_section{
+        display: block;
+    }
+    .skills_title{
+        font-size: 1.5rem;
+    }
+    .lang{
+        height: 300px;
+    }
+    .contact_form{
+        width: 100%;
+    }
+    .form_input{
+        width: 100%;
+    }
+    .form_input input, .form_input textarea{
+        width: 100%;
+    }
+
+    .footer{
+        flex-wrap: wrap;
+        justify-content: center;
+        
+    }
+    .hamberger{
+        display: block;
+        order: 1;
+        align-items: center;
+        padding-top: 10px;
+    }
 }
